# RiskSenseVLA

./: .gitignore  CONTRIBUTING.md  FINAL_RELEASE_REPORT.md  MODEL_CARD.md  README.md  RELEASE_NOTES.md  REPRODUCIBILITY.md  REPRODUCIBILITY_REPORT.md  environment.yml  pyproject.toml  requirements_lock.txt
.github/workflows/: phase4_gpu_benchmark.yml
artifacts/: README.md
artifacts/v1.0.0/: ablation_results.csv  ablation_results.json  ablation_results_multiseed.csv  ablation_results_multiseed.json  hardware_summary.json  significance_tests.json
configs/: ablation_phase4_example.yaml  backend_cuda.yaml  default.yaml  local_webcam_fast.yaml  local_webcam_realistic.yaml  phi4_multimodal.yaml
docs/: architecture.md  experiments.md  modules.md  project_overview.md  reproducibility.md
paper/: q1_draft.md
scripts/: benchmark_modules.py  benchmark_phase4.py  eval_all.py  eval_hoi.py  eval_memory_fps.py  eval_perception_fps.py  export_models.py  export_synthetic_to_training.py  generate_paper_figures.py  generate_paper_tables.py  generate_synthetic_hazards.py  parse_temporal_logs.py  preprocess_coco_openimages.py  preprocess_hoi.py  run_ablations.py  run_e2e_verify.py  run_hazard_reasoner_example.py  run_hoi_inference.py  run_memory_example.py  run_perception_smoke.py  run_realtime.py  train_all.py  train_hazard_vlm.py  train_hoi.py  train_perception.py  verify_synthetic_dataset.py
src/hapvla/: config.py
src/risksense_vla/: __init__.py  config.py  experimental.py
tests/smoke/: test_realtime_pipeline.py
tests/stress/: test_stress_scenarios.py
(+65 files in other folders)
